# MLLWebsite

./: .gitignore  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml
MLLWebsite/: urls.py  wsgi.py
MLLWebsite/settings/: base.py  dev.py  production.py
MLLWebsite/templates/: base.html
main_pages/: apps.py  models.py
main_pages/migrations/: 0001_initial.py  0002_delete_singlepage.py  0002_initialization.py  0003_singlepage.py
main_pages/templates/main_pages/: base.html  contact-us.html  courses.html  home.html  home_page.html  news.html  people.html  research.html
main_pages/templates/main_pages/components/: course.html  person.html
main_pages/templatetags/: page_query_tags.py  snippet_tags.py
posts/: __init__.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_auto_20200910_0337.py  0002_auto_20200910_1619.py  0003_advancedformsetting.py  0003_auto_20200910_0740.py  0004_advancedformsetting_from_address.py  0005_remove_advancedformsetting_from_address.py
posts/templates/posts/: base.html  flex_page.html  post_page.html  title_and_text_block.html
posts/utils/: wagtailstreamforms_hooks.py
snippets/: models.py
snippets/migrations/: 0001_initial.py  0002_auto_20200910_1123.py  0002_initialization.py
