[tool.poetry]
name = "mllwebsite"
version = "0.1.0"
description = ""
authors = ["Danial Alihosseini <danial.alihosseini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
wagtail = "^2.10.1"

[tool.poetry.dev-dependencies]
poetry = "^1.0.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
